<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conta"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="99dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="133dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacorrente"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagamentos"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="244dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinheiro"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="270dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duvidas"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="318dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversao"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="341dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ong"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="389dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suporte"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="447dp" />

</android.support.constraint.ConstraintLayout>