<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/show_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnpermission"
        android:backgroundTint="#9CC6D4"
        android:textColor="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/askPermition"/>

    <ImageView
        android:id="@+id/logoBro"
        android:layout_width="266dp"
        android:layout_height="171dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/password"
        android:src="@drawable/bro2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/askPermition"
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/permission"
        android:textSize="28sp"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBro"
        android:background="@drawable/rectangle"/>




</android.support.constraint.ConstraintLayout>




